<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.fco_c.myapplication.MainActivity">

  <Button
    android:id="@+id/btnA"
    android:text="@string/opcion_a"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    />

  <Button
    android:id="@+id/btnB"
    android:text="@string/opcion_b"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    />

  <Button
    android:id="@+id/btnC"
    android:text="@string/opcion_c"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
 />

  <Button
    android:id="@+id/btnD"
    android:layout_width="0dp"
    android:layout_height="62dp"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="11dp"
    android:layout_marginRight="11dp"
    android:text="@string/opcion_d"
    app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/btnB"
    app:layout_constraintTop_toBottomOf="@+id/btnC" />

  <Button
    android:id="@+id/btnAceptar"
    android:layout_width="151dp"
    android:layout_height="0dp"
    android:layout_marginBottom="50dp"
    android:layout_marginEnd="104dp"
    android:layout_marginRight="104dp"
    android:text="@string/aceptar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtPalabra" />

  <TextView
    android:id="@+id/txtPalabra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="319dp"
    android:layout_marginTop="67dp"
    android:text="@string/palabra"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
